# discord-reminder-bot

./: .env_sample_file  LICENSE  README.md  base.py  bot.py  const.py  creating.py  global_const.py  keep_alive.py  main.py  pyproject.toml  reminders_bot.py  reminding.py  requirements.txt
base/: base.py  texts.py  utils.py
reminders/: const.py  core.py  creating.py  reminders_bot.py  reminding.py  texts.py  user_profile.py  utils.py  validate.py
utils/: add_reminder_utils.py  other_utils.py  remind_utils.py  utils.py
