[tool.poetry]
name = "discord-reminder-bot"
version = "1.1.2"
description = ""
authors = ["bsski <contact.bsski@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
aiohttp = "3.7.4.post0"
async-timeout = "3.0.1"
attrs = "21.4.0"
chardet = "4.0.0"
click = "8.1.2"
colorama = "0.4.4"
discord = "1.7.3"
dnspython = "2.2.1"
Flask = "2.1.1"
idna = "3.3"
itsdangerous = "2.1.2"
Jinja2 = "3.1.1"
MarkupSafe = "2.1.1"
multidict = "6.0.2"
pymongo = "4.0.2"
python-dateutil = "2.8.2"
python-dotenv = "0.20.0"
pytz = "2022.1"
six = "1.16.0"
typing_extensions = "4.1.1"
Werkzeug = "2.1.1"
yarl = "1.7.2"
amg = "^1.0.7"
hashids = "^1.3.1

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

