[tool.poetry]
name = "discord-reminder-bot"
version = "1.1.2"
description = ""
authors = ["bsski <contact.bsski@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.11,<3.11"
numpy = "^1.22.2"
aiosignal = "1.3.1"
async-timeout = "4.0.3"
attrs = "23.2.0"
blinker = "1.7.0"
chardet = "4.0.0"
click = "8.1.7"
colorama = "0.4.6"
discord = "2.3.2"
dnspython = "2.5.0"
Flask = "3.0.1"
idna = "3.6"
itsdangerous = "2.1.2"
Jinja2 = "3.1.3"
MarkupSafe = "2.1.4"
multidict = "6.0.4"
pymongo = "4.6.1"
python-dateutil = "2.8.2"
python-dotenv = "0.20.0"
pytz = "2023.3.post1"
setuptools = "68.2.0"
six = "1.16.0"
typing_extensions = "4.1.1"
Werkzeug = "3.0.1"
yarl = "1.9.4"
amg = "^1.0.7"
hashids = "^1.3.1"
discord-py = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

